--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
   			<meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     		<title>Nyrius Home</title>
+    		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     		<link rel="stylesheet" href="css/style.css">
 		</head>
 
 		<body>
-			
+			<header>
+				<div class="container">
+					<img src="images/logo.png">
+					<a href="#" class="cart"><i class="fas fa-shopping-cart"></i></a>
+					<a href="#" class="messege"><i class="fas fa-comment-alt"></i></a>
+					<form action="" method=""class="search">
+           				<input type="text" placeholder="Search">
+           				<button><i class="fas fa-check"></i></i></button>
+       				</form>
+					<ul>
+						<li><a href="#">support</a></li>
+						<li><a href="#">products</a></li>
+					</ul>
+					<a href="#"></a>
+					<a href="#"></a>
+					<div class="contacts">
+						<span>Sales Assistance</span>
+						<span>1-855-293-SALE (7253)</span>
+					</div>
+				</div>
+			</header>
 		</body>
 	</html>
