header error correction2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<body>
 			<header>
 				<div class="container">
-					<img src="images/logo.png">
+					<a href="#"><img src="images/logo.png"></a>
 					<a href="#" class="cart"><i class="fas fa-shopping-cart"></i></a>
 					<a href="#" class="messege"><i class="fas fa-comment-alt"></i></a>
 					<form action="" method=""class="search">
