--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     		<link rel="stylesheet" href="css/style.css">
+    		<link rel="stylesheet" href="css/media-queries.css">
 		</head>
 
 		<body>
@@ -30,6 +31,15 @@
 					</div>
 				</div>
 			</header>
-			
+			<div class="container">
+				<section class="banner1">
+					<img src="images/banner1.png" id="slider">
+					<a href="#">connecting</a>
+				</section>	
+			</div>
+		<script src="js/jquery-3.2.1.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="js/script.js"></script>
 		</body>
 	</html>
+								
